[package]
name = "am2301"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-futures = "0.1.1"
