[package]
name = "am2301-examples"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
am2301 = {version = "0.2.0", path = "../../am2301-rs"}

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"

embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-futures = "0.1.1"
embassy-executor = { version = "0.6.2", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "task-arena-size-196608"] }
